fixes issue on author profile where bot table extended past limit on firefox. Fixes #33

--- a/client-src/css/style.scss
+++ b/client-src/css/style.scss
@@ -100,6 +100,11 @@ pre {
   @media(max-width: $max-mobile-width) { flex-direction: column; }
 }
 
+.flex-fill-remaining-space {
+  flex: auto;
+  width: 100%;
+}
+
 /* ---------------------------------------------------
     PAGE-AREA STYLE
 ----------------------------------------------------- */
